# aoc2024

./: .gitignore  README.md  setup.sh
day1/part1/: CMakeLists.txt
day1/part1/input/: input:Zone.Identifier
day1/part1/src/: main.cpp
day1/part2/: CMakeLists.txt
day1/part2/src/: main.cpp
day2/part1/: CMakeLists.txt
day2/part1/src/: main.cpp
day2/part2/: CMakeLists.txt
day2/part2/src/: main.cpp
day3/part1/: CMakeLists.txt
day3/part1/src/: main.cpp
